# titanic

./: 2blend_plus.csv  2catboost.csv  2stack_logreg.csv  2stack_ridge.csv  Kaggle Template.md  Notes.md  README.md  main.py  pyproject.toml  results.csv  submission_catboost_ext.csv  submission_stack_logreg_top4.csv  submission_stack_ridge_top4.csv  titanic.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
