[project]
name = "titanic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "graphviz>=0.21",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.2",
    "xgboost>=3.2.0",
]
